fix: markdown insed the notebook

--- a/deep_learnig_covid_19_radiography.ipynb
+++ b/deep_learnig_covid_19_radiography.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,8 +18,69 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/FlamingoLindo/Deep-Learnig-COVID-19-Radiography/blob/main/deep_learnig_covid_19_radiography.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Utilizando Deep Learning para a classificação de tipos de imagens de raio-X de tórax\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Feito por alunos da UMC (Universidade de Mogi das Cruzes):\n",
+        "\n",
+        "- [Augusto Paschoal](adicionar conta github)\n",
+        "\n",
+        "- [Bruno Melo](https://github.com/Brunomellosp)\n",
+        "\n",
+        "- [Bryan Henrique](https://github.com/bryanhenriquek)\n",
+        "\n",
+        "- [Caio Zampini](https://github.com/zampini28)\n",
+        "\n",
+        "- [Carlos Henrique](https://github.com/carloosz)\n",
+        "\n",
+        "- [Davi Ferreira](https://github.com/DaviFerreira0106)\n",
+        "\n",
+        "- [Lucas Lizot](https://github.com/LLizot)\n",
+        "\n",
+        "- [Ronald Ivan](https://github.com/Ronald-Ivan-9)\n",
+        "\n",
+        "- [Vitor Ferreira](https://github.com/FlamingoLindo)\n",
+        "\n",
+        "- [Victor Yuzo](https://github.com/VictorYuzoBR)"
+      ],
+      "metadata": {
+        "id": "h2w4vpD5dzyb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Código"
+      ],
+      "metadata": {
+        "id": "N8-MmEWugpzX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Importação das bibliotecas necessárias"
+      ],
+      "metadata": {
+        "id": "dp1KdNkXguy6"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ff9bzrlt4bsV"
       },
@@ -38,6 +100,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Clonando o repositório do projeto dentro do notebook"
+      ],
+      "metadata": {
+        "id": "UVXaabT5gx6T"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "! git clone https://github.com/FlamingoLindo/Deep-Learnig-COVID-19-Radiography.git"
@@ -49,7 +120,7 @@
         "id": "oMgQ6JEFEiMg",
         "outputId": "6f3b4a8d-9cc1-4738-c9bc-43424b17daa7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,11 +132,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Definido a alutra, largura e o tamannho do batch das imagens"
+      ],
+      "metadata": {
+        "id": "hP0c45Q-g_V2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "IMAGE_HEIGHT=256\n",
         "IMAGE_WIDTH=256\n",
-        "BATCH_SIZE=64\n",
+        "BATCH_SIZE=64"
+      ],
+      "metadata": {
+        "id": "TopANOnRg-PM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Função para separar as imagens em categorias e pegar os seus caminhos"
+      ],
+      "metadata": {
+        "id": "T571UqN0hJl2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def get_pathframe(path):\n",
         "  '''\n",
         "  Obtém todos os caminhos das imagens e seus rótulos correspondentes e armazena\n",
@@ -96,8 +195,35 @@
       "metadata": {
         "id": "rimbIVf7EjD1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Categorias de Imagens\n",
+        "\n",
+        "#### 1. COVID | 2. Lung_Opacity | 3. Normal | 4. Viral Pneumonia\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <img src=\"https://github.com/FlamingoLindo/Deep-Learnig-COVID-19-Radiography/blob/main/Dataset/COVID-1.png?raw=true\" alt=\"COVID\" width=\"200\"/>\n",
+        "  <img src=\"https://github.com/FlamingoLindo/Deep-Learnig-COVID-19-Radiography/blob/main/Dataset/Lung_Opacity-1.png?raw=true\" alt=\"Lung_Opacity\" width=\"200\"/>\n",
+        "  <img src=\"https://github.com/FlamingoLindo/Deep-Learnig-COVID-19-Radiography/blob/main/Dataset/Normal-1.png?raw=true\" alt=\"Normal\" width=\"200\"/>\n",
+        "  <img src=\"https://github.com/FlamingoLindo/Deep-Learnig-COVID-19-Radiography/blob/main/Dataset/Viral%20Pneumonia-1.png?raw=true\" alt=\"Viral Pneumonia\" width=\"200\"/>\n",
+        "</p>\n"
+      ],
+      "metadata": {
+        "id": "FfU-2oR3hcbM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Verificação para ver se o dataframe criado está de acordo e se está com o desejado"
+      ],
+      "metadata": {
+        "id": "8tgmliOThU5u"
+      }
     },
     {
       "cell_type": "code",
@@ -113,7 +239,7 @@
         "id": "rIwkN_HGEkV_",
         "outputId": "f2322b07-9593-4905-ac6f-a3754d8e1262"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,6 +541,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Ajustando o tamanho do dataset"
+      ],
+      "metadata": {
+        "id": "jTEdjLpXhngW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tamanho total do dataset"
+      ],
+      "metadata": {
+        "id": "B2Sk89kAhqt4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "len(df)"
@@ -426,7 +570,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,11 +585,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Removendo 5000 imagens da categoria \"Normal\""
+      ],
+      "metadata": {
+        "id": "Nni2i-szhur6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "indices_to_delete = df[df['category'] == 2].index[:5000]\n",
         "\n",
-        "# Drop the rows\n",
         "df = df.drop(indices_to_delete)\n",
         "len(df)"
       ],
@@ -456,7 +608,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,6 +623,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Aqui foi feito a remoção de 5000 imagens da categoria \"Normal\" pois havia muito mais imagens dessa categoria do que das outras, isso poderia gererar um desbalanceamento na hora do treinamento do modelo."
+      ],
+      "metadata": {
+        "id": "qNTnT8_Sh0PO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Função para redimensionar as imagens"
+      ],
+      "metadata": {
+        "id": "FF6qq0kGh_sX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def load_and_preprocess_image(path):\n",
@@ -481,25 +651,51 @@
         "  image = tf.image.decode_jpeg(image, channels=3)\n",
         "  image = tf.image.resize(image, [IMAGE_WIDTH, IMAGE_HEIGHT])\n",
         "  image /= 255.0  # normalize to [0,1] range\n",
-        "  return image\n",
-        "\n",
+        "  return image"
+      ],
+      "metadata": {
+        "id": "i9cqNnUxFQPE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Função para a criação de tensores"
+      ],
+      "metadata": {
+        "id": "o3XwkZociNfA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def convert_to_tensor(df):\n",
         "  '''\n",
         "  Converte cada dado e rótulo em um tensor\n",
         "  '''\n",
         "  path_ds = tf.data.Dataset.from_tensor_slices(df['paths'])\n",
         "  image_ds = path_ds.map(load_and_preprocess_image)\n",
-        "  # onehot_label=tf.one_hot(tf.cast(df['category'], tf.int64),2) if using softmax\n",
         "  onehot_label=tf.cast(df['category'], tf.int64)\n",
         "  label_ds = tf.data.Dataset.from_tensor_slices(onehot_label)\n",
         "\n",
         "  return image_ds,label_ds"
       ],
       "metadata": {
-        "id": "i9cqNnUxFQPE"
+        "id": "jHYTblgvh-Hz"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Formatos dos dados X e Y convertidos em tensor"
+      ],
+      "metadata": {
+        "id": "Namw4990iTMq"
+      }
     },
     {
       "cell_type": "code",
@@ -515,7 +711,7 @@
         "id": "CHbSUCUrFU_I",
         "outputId": "f8a64d36-5c08-4780-97da-b259a7cde2a2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,6 +722,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Separação do dataset em 80% treino e 20% teste e treinamento"
+      ],
+      "metadata": {
+        "id": "NCBHrwgIiaBa"
+      }
     },
     {
       "cell_type": "code",
@@ -545,7 +750,7 @@
         "id": "rHBtlHBSFW1G",
         "outputId": "7e3d0d85-a059-4095-d4dc-afbeaac07a1e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,6 +763,15 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mostrando uma amostra das imagens"
+      ],
+      "metadata": {
+        "id": "G6eFgcYzijLC"
+      }
     },
     {
       "cell_type": "code",
@@ -583,7 +797,7 @@
         "id": "Q_qadB0QFX8J",
         "outputId": "40d61e1e-866c-4c60-f9c7-4f0a9f07851a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -598,10 +812,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Criação de função para definir e retornar um modelo de rede neural convolucional (CNN)"
+      ],
+      "metadata": {
+        "id": "I4ygQ1Z2jfXZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def My_CNNmodel():\n",
-        "\n",
         "  model = tf.keras.models.Sequential()\n",
         "  model.add(layers.Conv2D(8, (3, 3), padding='same',activation='relu', input_shape=(IMAGE_WIDTH, IMAGE_HEIGHT, 3)))\n",
         "  model.add(layers.MaxPooling2D(pool_size=(2,2)))\n",
@@ -611,11 +833,11 @@
         "  model.add(layers.MaxPooling2D(pool_size=(2,2)))\n",
         "  model.add(layers.Flatten())\n",
         "  model.add(layers.Dense(256, activation='relu'))\n",
-        "  model.add(layers.Dense(4, activation='softmax')) # softmax\n",
+        "  model.add(layers.Dense(4, activation='softmax'))\n",
         "\n",
         "  opt=tf.keras.optimizers.Adam(1e-4)\n",
         "  model.compile(optimizer=opt,\n",
-        "              loss='sparse_categorical_crossentropy', # loss='categorical_crossentropy' if softmax\n",
+        "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
         "\n",
         "  return model"
@@ -623,8 +845,28 @@
       "metadata": {
         "id": "da2Lx9SpFY7B"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Foi utilzado o modo `softmax`, já que os exitem mais de 2 categorias no dataset.\n",
+        "\n",
+        "* Na função de perda foi optado utilizar o `sparse_categorical_crossentropy` pois os nossos rótulos são numéricos (inteiros) e não vetores one-hot."
+      ],
+      "metadata": {
+        "id": "ejlvVIshjpFd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Resumo útil do modelo"
+      ],
+      "metadata": {
+        "id": "OLWDpss3jwjD"
+      }
     },
     {
       "cell_type": "code",
@@ -640,7 +882,7 @@
           "height": 497
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,6 +1000,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Treinamento do modelo"
+      ],
+      "metadata": {
+        "id": "iRMT5pw8kIuQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "hist = model.fit(dataset_train, epochs=10, validation_data=dataset_test)"
@@ -769,7 +1020,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,6 +1051,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Salvando o modelo treinado em um arquivo"
+      ],
+      "metadata": {
+        "id": "_lH4n4BJkZca"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "model.save(\"my_model.keras\")"
@@ -807,8 +1067,17 @@
       "metadata": {
         "id": "kBpD6usbFd1G"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Visualização do desempenho do modelo treinado ao longo das épocas"
+      ],
+      "metadata": {
+        "id": "UM4TTm08kldT"
+      }
     },
     {
       "cell_type": "code",
@@ -846,7 +1115,7 @@
           "height": 487
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -861,6 +1130,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##  Regularização em redes neurais, ajudando a prevenir o overfitting durante o treinament"
+      ],
+      "metadata": {
+        "id": "wza6AaO4lRzn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "tf.keras.layers.Dropout(0.5)"
@@ -872,7 +1150,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -887,6 +1165,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Normalizar as ativações de uma camada durante o treinamento"
+      ],
+      "metadata": {
+        "id": "QX7BnJSClXWP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "tf.keras.layers.BatchNormalization()"
@@ -898,7 +1185,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,6 +1198,15 @@
           "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Matriz de confusão e resultados"
+      ],
+      "metadata": {
+        "id": "5CsgbpFflhB7"
+      }
     },
     {
       "cell_type": "code",
@@ -946,7 +1242,7 @@
           "height": 770
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +1278,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
