--- a/deep_learnig_covid_19_radiography.ipynb
+++ b/deep_learnig_covid_19_radiography.ipynb
@@ -30,11 +30,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Utilizando Deep Learning para a classificação de tipos de imagens de raio-X de tórax\n",
+        "# Classificação de Imagens de Raio-X de Tórax utilizando Deep Learning\n",
         "\n",
-        "---\n",
+        "Este projeto utiliza técnicas de *Deep Learning* para a classificação de tipos de imagens de raio-X de tórax, com o objetivo de identificar sinais de doenças pulmonares, como a pneumonia e a COVID-19, a partir de radiografias. O código foi desenvolvido por alunos da Universidade de Mogi das Cruzes (UMC).\n",
         "\n",
-        "Feito por alunos da UMC (Universidade de Mogi das Cruzes):\n",
+        "## Integrantes do Projeto\n",
         "\n",
         "- [Augusto Paschoal](adicionar conta github)\n",
         "\n",
